--- a/styles.v2.css
+++ b/styles.v2.css
@@ -528,6 +528,12 @@ p {
 
 /* Remove responsive changes for fixed retro layout */
 @media (max-width: 768px) {
+    /* Scale entire window slightly for tablet */
+    .mac-window {
+        transform: scale(0.85);
+        transform-origin: top left;
+    }
+    
     /* Mobile menu bar adjustments */
     .menu-bar {
         height: 32px;
@@ -608,6 +614,12 @@ p {
 }
 
 @media (max-width: 480px) {
+    /* Scale entire window more for small mobile */
+    .mac-window {
+        transform: scale(0.75);
+        transform-origin: top left;
+    }
+    
     /* Small mobile adjustments */
     .menu-bar {
         height: 36px;
@@ -677,6 +689,12 @@ p {
 
 /* Extra small mobile devices */
 @media (max-width: 360px) {
+    /* Scale entire window even more for extra-small devices */
+    .mac-window {
+        transform: scale(0.65);
+        transform-origin: top left;
+    }
+    
     .desktop-icon {
         width: 50px;
         height: 60px;
